--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@ input{
     color:#979797;
     width:190px;
 }
+
+.banner img {
+	width: 100%;
+}
+
 address,caption,cite,code,dfn,th,var {
     font-style:normal;
     font-weight:normal;
